--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
         }
     ],
     "require": {
-        "php": "^7.1"
+        "php": "^7.2"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "phpunit/phpunit": "8.5.2"
     },
     "autoload": {
         "psr-4": {
@@ -22,10 +26,16 @@
             "Ksaveras\\MathCalculator\\Test\\": "tests"
         }
     },
-    "config": {
-        "sort-packages": true
+    "scripts": {
+        "phpcsfix": "@php ./vendor/bin/php-cs-fixer fix",
+        "phpcscheck": "@php ./vendor/bin/php-cs-fixer fix --dry-run --diff --diff-format=udiff",
+        "phpstan": "@php ./vendor/bin/phpstan analyse src tests",
+        "test": "@php ./vendor/bin/phpunit"
     },
-    "require-dev": {
-        "phpunit/phpunit": "8.5.2"
+    "config": {
+        "sort-packages": true,
+        "platform": {
+            "php": "7.2.5"
+        }
     }
 }
