--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
+        "phpstan/phpstan": "^0.12.7",
+        "phpstan/phpstan-phpunit": "^0.12.6",
         "phpunit/phpunit": "8.5.2"
     },
     "autoload": {
