--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,7 @@
 parameters:
     level: 7
     checkMissingIterableValueType: false
+    reportUnmatchedIgnoredErrors: false
 
     ignoreErrors:
         -
